--- a/SelfHelp.API/appsettings.Development.json
+++ b/SelfHelp.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PostgresDbConnection": "Server=self_help_db;Database=self_help_database;Port=5432;User Id=postgres;Password=postgres"
   }
 }
