--- a/SelfHelp.API/appsettings.json
+++ b/SelfHelp.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgresDbConnection" : "Server=localhost;Database=self_help_database;Port=5432;User Id=postgres;Password=postgres"
+    }
+ }
