SelfHelp - 3 Adding Challenge APIs
Adding create challenge, add challenge steps
and get challenge by userid and search text.
Added new tables for the same and some documentation
text for request models

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,5 +12,6 @@
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 </Project>
