--- a/SelfHelp.API/SelfHelp.API.csproj
+++ b/SelfHelp.API/SelfHelp.API.csproj
@@ -7,6 +7,8 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <RootNamespace>SelfHelp.API</RootNamespace>
         <Platforms>AnyCPU;x64</Platforms>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <DocumentationFile>SelfHelpApi.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,6 +22,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
         <PackageReference Include="Swashbuckle.AspNetCore" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
     </ItemGroup>
 
     <ItemGroup>
